// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStepNumber is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStepNumber testClass1 testClass2"
  data-test-subj="test subject string"
>
  <p
    class="euiScreenReaderOnly"
  >
    Step 
  </p>
  <p
    aria-hidden="true"
  />
</div>
`;

exports[`EuiStepNumber props has titleSize is rendered 1`] = `
<div
  class="euiStepNumber"
>
  <p
    class="euiScreenReaderOnly"
  >
    Step 1
  </p>
  <p
    aria-hidden="true"
  >
    1
  </p>
</div>
`;

exports[`EuiStepNumber props isHollow is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber-isHollow"
/>
`;

exports[`EuiStepNumber props status complete is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber--complete"
>
  <span
    aria-label="Step 1 is complete"
    class="euiStepNumber__icon"
    data-euiicon-type="check"
  />
</div>
`;

exports[`EuiStepNumber props status danger is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber--danger"
>
  <span
    aria-label="Step 1 has errors"
    class="euiStepNumber__icon"
    data-euiicon-type="cross"
  />
</div>
`;

exports[`EuiStepNumber props status disabled is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber--disabled"
>
  <p
    class="euiScreenReaderOnly"
  >
    Step 1 is disabled
  </p>
  <p
    aria-hidden="true"
  >
    1
  </p>
</div>
`;

exports[`EuiStepNumber props status incomplete is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber--incomplete"
>
  <p
    class="euiScreenReaderOnly"
  >
    Step 1 is incomplete
  </p>
  <p
    aria-hidden="true"
  >
    1
  </p>
</div>
`;

exports[`EuiStepNumber props status warning is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber--warning"
>
  <span
    aria-label="Step 1 has warnings"
    class="euiStepNumber__icon"
    data-euiicon-type="alert"
  />
</div>
`;
